--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   journal={(Pre-print) 26th International Conference on Medical Image Computing and Computer Assisted Intervention},
   year={2023},
   preview={miccai2023.gif}, 
+  url={https://arxiv.org/pdf/2306.12155.pdf},
   selected={true}
 
 }
@@ -17,6 +18,7 @@
   journal={20th IEEE International Symposium on Biomedical Imaging (ISBI)},
   year={2023}, 
   preview={vessel-gif.gif}, 
+  url={https://arxiv.org/pdf/2302.14795.pdf}
   selected={true}
 }
 
