--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
   journal={20th IEEE International Symposium on Biomedical Imaging (ISBI)},
   year={2023}, 
   preview={vessel-gif.gif}, 
-  url={https://arxiv.org/pdf/2302.14795.pdf}
+  url={https://arxiv.org/pdf/2302.14795.pdf},
   selected={true}
 }
 
