--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@article{bransby2024miccai,
+  title={Joint Dense-Point Representation for Contour-Aware Graph Segmentation},
+  author={Bransby, Kit Mills  and Beqiri, Arian and Cho Kim, Woo-Jin and Oliveira, Jorge and Chartsias, Agisilaos and Gomez, Alberto},
+  journal={(Pre-print) 27th International Conference on Medical Image Computing and Computer Assisted Intervention},
+  year={2024},
+  preview={backmix.png}, 
+  pdf={https://arxiv.org/pdf/2406.19148},
+  selected={true}
+
 @article{bransby2023miccai,
   title={Joint Dense-Point Representation for Contour-Aware Graph Segmentation},
   author={Bransby, Kit Mills and Tufaro, Vincenzo and Cap, Murat and Slabaugh, Greg and Bourantas, Christos and Zhang, Qianni},
@@ -22,23 +31,3 @@
   selected={true}
 }
 
-@article{bajaj2022tct,
-  title={TCT-254 Histology-Trained Deep Learning Methodology for Automated Coronary Plaque Component Classification in Combined Intravascular Ultrasound-Optical Coherence Tomography Images},
-  author={Bajaj, Retesh and Huang, Xingru and Alves, Natasha and Weyers, Jill and Levine, Molly and Garg, Mohil and Maung, Soe and Bransby, Kit and Torii, Ryo and Krams, Rob and others},
-  journal={Journal of the American College of Cardiology},
-  volume={80},
-  number={12\_Supplement},
-  pages={B100--B100},
-  year={2022},
-  publisher={American College of Cardiology Foundation Washington DC}, 
-  preview={jacc.png}
-}
-
-@inproceedings{huang2023histology,
-  title={Histology-trained deep learning model for automated coronary plaque composition assessment in combined intravascular ultrasound-optical coherence tomography images},
-  author={Huang, Xingru and Bajaj, Retesh and Alves-Kotzev, Natasha and Weyers, Jill and Levine, Molly and Garg, Mohil and Maung, Soe and Garcia, Hector Garcia and Bransby, Kit M and Torii, Ryo and others},
-  booktitle={Diagnostic and Therapeutic Applications of Light in Cardiology 2023},
-  pages={PC123550A},
-  year={2023},
-  organization={SPIE}
-}
