fix news post limit

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@
 @article{bransby2023miccai,
   title={Joint Dense-Point Representation for Contour-Aware Graph Segmentation},
   author={Bransby, Kit Mills and Tufaro, Vincenzo and Cap, Murat and Slabaugh, Greg and Bourantas, Christos and Zhang, Qianni},
-  journal={(Pre-print) 26th International Conference on Medical Image Computing and Computer Assisted Intervention},
+  journal={26th International Conference on Medical Image Computing and Computer Assisted Intervention},
   year={2023},
   preview={miccai2023.gif}, 
   pdf={https://arxiv.org/pdf/2306.12155.pdf},
@@ -29,6 +29,6 @@
   year={2023}, 
   preview={vessel-gif.gif}, 
   pdf={https://arxiv.org/pdf/2302.14795.pdf},
-  selected={true}
+  selected={false}
 }
 
