--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,34 +1,63 @@
 ---
 ---
+@article{polycore,
+  title={BackMix: Mitigating Shortcut Learning in Echocardiography with Minimal Supervision},
+  author={Bransby, Kit Mills and Bajaj, Retesh and Ramasamy, Anantharaman and Cap, Murat and Yap, Nathan and Slabaugh, Gregory and Bourantas, Christos and Zhang, Qianni},
+  journal={(Pre-print) 27th International Conference on Medical Image Computing and Computer Assisted Intervention},
+  year={2024},
+  preview={backmix.png}, 
+  pdf={https://www.sciencedirect.com/science/article/pii/S0010482524012472},
+  code={https://github.com/kitbransby/POLYCORE}, 
+  bibtex_show={true},
+  selected={true}
+}
 
-@article{bransby2024miccai,
-  title={Joint Dense-Point Representation for Contour-Aware Graph Segmentation},
+
+@article{backmix,
+  title={BackMix: Mitigating Shortcut Learning in Echocardiography with Minimal Supervision},
   author={Bransby, Kit Mills  and Beqiri, Arian and Cho Kim, Woo-Jin and Oliveira, Jorge and Chartsias, Agisilaos and Gomez, Alberto},
   journal={(Pre-print) 27th International Conference on Medical Image Computing and Computer Assisted Intervention},
   year={2024},
   preview={backmix.png}, 
   pdf={https://arxiv.org/pdf/2406.19148},
+  code={https://github.com/kitbransby/BackMix}, 
+  bibtex_show={true},
   selected={true}
 }
 
-@article{bransby2023miccai,
+@article{multi_site_CIL,
+  title={Multi-Site Class-Incremental Learning with Weighted Experts in Echocardiography},
+  author={Bransby, Kit M and Kim, Woo-jin Cho and Oliveira, Jorge and Thorley, Alex and Beqiri, Arian and Gomez, Alberto and Chartsias, Agisilaos},
+  journal={MICCAI Workshop on Advances in Simplifying Medical Ultrasound (ASMUS)},
+  year={2024},
+  preview={backmix.png}, 
+  pdf={https://arxiv.org/pdf/2406.19148},
+  code={https://github.com/kitbransby/BackMix}, 
+  bibtex_show={true},
+  selected={true}
+}
+
+@article{dense_point,
   title={Joint Dense-Point Representation for Contour-Aware Graph Segmentation},
   author={Bransby, Kit Mills and Tufaro, Vincenzo and Cap, Murat and Slabaugh, Greg and Bourantas, Christos and Zhang, Qianni},
   journal={26th International Conference on Medical Image Computing and Computer Assisted Intervention},
   year={2023},
   preview={miccai2023.gif}, 
   pdf={https://arxiv.org/pdf/2306.12155.pdf},
-  selected={true}
+  code={https://github.com/kitbransby/Joint_Graph_Segmentation}, 
+  bibtex_show={true},
+  selected={false}
 
 }
 
-@article{bransby2023isbi,
+@article{3d_coronary_reconstruction,
   title={3D Coronary Vessel Reconstruction from Bi-Plane Angiography using Graph Convolutional Networks},
   author={Bransby, Kit Mills and Tufaro, Vincenzo and Cap, Murat and Slabaugh, Greg and Bourantas, Christos and Zhang, Qianni},
   journal={20th IEEE International Symposium on Biomedical Imaging (ISBI)},
   year={2023}, 
   preview={vessel-gif.gif}, 
   pdf={https://arxiv.org/pdf/2302.14795.pdf},
+  bibtex_show={true},
   selected={false}
 }
 
