--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,9 +3,9 @@
 @article{polycore,
   title={BackMix: Mitigating Shortcut Learning in Echocardiography with Minimal Supervision},
   author={Bransby, Kit Mills and Bajaj, Retesh and Ramasamy, Anantharaman and Cap, Murat and Yap, Nathan and Slabaugh, Gregory and Bourantas, Christos and Zhang, Qianni},
-  journal={(Pre-print) 27th International Conference on Medical Image Computing and Computer Assisted Intervention},
+  journal={Computers in Biology and Medicine},
   year={2024},
-  preview={backmix.png}, 
+  preview={polycore.png}, 
   pdf={https://www.sciencedirect.com/science/article/pii/S0010482524012472},
   code={https://github.com/kitbransby/POLYCORE}, 
   bibtex_show={true},
@@ -16,7 +16,7 @@
 @article{backmix,
   title={BackMix: Mitigating Shortcut Learning in Echocardiography with Minimal Supervision},
   author={Bransby, Kit Mills  and Beqiri, Arian and Cho Kim, Woo-Jin and Oliveira, Jorge and Chartsias, Agisilaos and Gomez, Alberto},
-  journal={(Pre-print) 27th International Conference on Medical Image Computing and Computer Assisted Intervention},
+  journal={27th International Conference on Medical Image Computing and Computer Assisted Intervention},
   year={2024},
   preview={backmix.png}, 
   pdf={https://arxiv.org/pdf/2406.19148},
@@ -30,9 +30,9 @@
   author={Bransby, Kit M and Kim, Woo-jin Cho and Oliveira, Jorge and Thorley, Alex and Beqiri, Arian and Gomez, Alberto and Chartsias, Agisilaos},
   journal={MICCAI Workshop on Advances in Simplifying Medical Ultrasound (ASMUS)},
   year={2024},
-  preview={backmix.png}, 
-  pdf={https://arxiv.org/pdf/2406.19148},
-  code={https://github.com/kitbransby/BackMix}, 
+  preview={asmus.png}, 
+  pdf={https://arxiv.org/abs/2407.21577},
+  code={https://github.com/kitbransby/class-incremental-learning-echo}, 
   bibtex_show={true},
   selected={true}
 }
