--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 @article{polycore,
-  title={BackMix: Mitigating Shortcut Learning in Echocardiography with Minimal Supervision},
+  title={POLYCORE: Polygon-based contour refinement for improved Intravascular Ultrasound Segmentation},
   author={Bransby, Kit Mills and Bajaj, Retesh and Ramasamy, Anantharaman and Cap, Murat and Yap, Nathan and Slabaugh, Gregory and Bourantas, Christos and Zhang, Qianni},
   journal={Computers in Biology and Medicine},
   year={2024},
