--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,9 +2,12 @@
 ---
 @article{polycore,
   title={POLYCORE: Polygon-based contour refinement for improved Intravascular Ultrasound Segmentation},
-  author={Bransby, Kit Mills and Bajaj, Retesh and Ramasamy, Anantharaman and Cap, Murat and Yap, Nathan and Slabaugh, Gregory and Bourantas, Christos and Zhang, Qianni},
+  author={Bransby, Kit Mills and Bajaj, Retesh and Ramasamy, Anantharaman and {\c{C}}ap, Murat and Yap, Nathan and Slabaugh, Gregory and Bourantas, Christos and Zhang, Qianni},
   journal={Computers in Biology and Medicine},
+  volume={182},
+  pages={109162},
   year={2024},
+  publisher={Elsevier}, 
   preview={polycore.png}, 
   pdf={https://www.sciencedirect.com/science/article/pii/S0010482524012472},
   code={https://github.com/kitbransby/POLYCORE}, 
